--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ leadimage: trump-tillerson-haley.jpg
 leadimage_description: "New to international relations? Not sure how things work? You're welcome to follow and learn from this intro-level course."
 authorurl: "http://svmiller.com"
 syllabus: "http://posc1020.svmiller.com/syllabus/posc1020-fall2018-syllabus.pdf"
+githublink: "https://github.com/svmiller/posc1020"
 
 # Build settings
 markdown: kramdown
