--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -7,3 +7,8 @@
   filename: historical-intro
   dirname: historical-intro
   tldr: "Here's a history of the world, from 1492 to the present, summarizing major themes in international politics (and war) along the way."
+
+- title: "Understanding Interests, Interactions, and Institutions"
+  filename: iii
+  dirname: iii
+  tldr: "Identifying important actors, their strategic behavior, and their institutional frameworks, will help us understand international politics more broadly."
