edit to fix that

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -11,4 +11,4 @@
 - title: "Understanding Interests, Interactions, and Institutions"
   filename: iii
   dirname: iii
-  tldr: "Identifying important actors, their strategic behavior, and their institutional frameworks, will help us understand international politics more broadly."
+  tldr: "Identifying decision-makers, their strategic behavior, and their institutional frameworks, will help us understand international politics."
