--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -32,3 +32,8 @@
   filename: alliance-bargaining
   dirname: alliance-bargaining
   tldr: "Alliances are institutions to coordinate security policies and influence bargaining between two sides."
+
+- title: "Collective Security as Public Good"
+  filename: collective-security
+  dirname: collective-security
+  tldr: "Here's a introduction to collective security organizations (e.g. UN, African Union). They ideally prevent/end war, with varying degrees of success."
