--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -36,4 +36,4 @@
 - title: "Collective Security as Public Good"
   filename: collective-security
   dirname: collective-security
-  tldr: "Here's a introduction to collective security organizations (e.g. UN, African Union). They ideally prevent/end war, with varying degrees of success."
+  tldr: "Collective security organizations (e.g. UN, African Union) ideally prevent/end war, but with varying degrees of success."
