add it to the yaml

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -52,3 +52,8 @@
   filename: trade-1
   dirname: trade-1
   tldr: "Free trade creates abundance and is good for peace. Let's describe it and explain why we limit this good thing."
+
+- title: "Trade As Strategic Problem"
+  filename: trade-2
+  dirname: trade-2
+  tldr: "Trade resembles a prisoner's dilemma, but small numbers, reciprocation, repeated interaction, and linkage politics help it happen."
