--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -56,4 +56,4 @@
 - title: "Trade As Strategic Problem"
   filename: trade-2
   dirname: trade-2
-  tldr: "Trade resembles a prisoner's dilemma, but small numbers, reciprocation, repeated interaction, and linkage politics help it happen."
+  tldr: "Trade resembles a prisoner's dilemma, but small numbers, information, repeated interaction, and linkage politics help it happen."
