add finance lecture

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -57,3 +57,8 @@
   filename: trade-2
   dirname: trade-2
   tldr: "Trade resembles a prisoner's dilemma, but small numbers, information, repeated interaction, and linkage politics help it happen."
+
+- title: "Who Invests Overseas and Why?"
+  filename: finance-1
+  dirname: finance-1
+  tldr: "Overseas investment tops $5 trillion USD a year. That's a lot, and that's good. Here's why it happens, and the potential pitfalls."
