--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -68,3 +68,8 @@
   filename: monetary-relations-1
   dirname: monetary-relations-1
   tldr: "An introduction to exchange rates/currency policy, with applications to the U.S. and Argentina's infamous currency collapse."
+
+- title: "Ebbs and Flows of International Monetary Regimes"
+  filename: monetary-relations-2
+  dirname: monetary-relations-2
+  tldr: "A discussion of the major IMRs the world has known and some major currency crises, like 'Nixon Shock' and 'Black Wednesday.'"
