add the lecture

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -73,3 +73,9 @@
   filename: monetary-relations-2
   dirname: monetary-relations-2
   tldr: "A discussion of the major IMRs the world has known and some major currency crises, like 'Nixon Shock' and 'Black Wednesday.'"
+
+
+- title: "Why Are Some Countries Richer Than Others?"
+  filename: development-1
+  dirname: development-1
+  tldr: "Development varies by geography and domestic factors/institutions and rich countries bear some responsibility for why poor countries are poor."
