--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -78,4 +78,4 @@
 - title: "Why Are Some Countries Richer Than Others?"
   filename: development-1
   dirname: development-1
-  tldr: "Development varies by geography and domestic factors/institutions and rich countries bear some responsibility for why poor countries are poor."
+  tldr: "There are broad correlates for development patterns and rich countries bear some responsibility for why poor countries are poor."
