hate it when that happens

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -83,4 +83,4 @@
 - title: "Development Policies and Development Politics"
   filename: development-2
   dirname: development-2
-  tldr: "Less-developed countries have various development tools in their pockets (e.g. ISI, EOI, commodity cartels), with varying levels of success."
+  tldr: "Less-developed countries have various development policies (e.g. ISI, EOI, commodity cartels), with varying levels of success."
