--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -84,3 +84,9 @@
   filename: development-2
   dirname: development-2
   tldr: "Less-developed countries have various development policies (e.g. ISI, EOI, commodity cartels), with varying levels of success."
+
+
+- title: "The International Politics of Human Rights"
+  filename: human-rights-1
+  dirname: human-rights-1
+  tldr: "Human rights have generally improved over time even as a function of a post-WWII international interest in this issue."
