--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -100,4 +100,4 @@
 - title: "The Future of International Politics"
   filename: future-1
   dirname: future-1
-  tldr: "What does the future of international politics hold? Concerns for nuclear proliferation, the ''rise of China'', and globalization's side effects."
+  tldr: "What does the future of international politics hold? Concerns for WMD proliferation, the ''rise of China'', and globalization's side effects."
