--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -12,11 +12,11 @@
   filename: iii
   dirname: iii
   tldr: "Identifying decision-makers, their strategic behavior, and their institutional frameworks, will help us understand international politics."
-# 
-# - title: "Why Are There Wars?"
-# filename: war-1
-# dirname: war-1
-# tldr: "Wars may be mostly fought over territory, but war is conceptually a failed bargain. Here's a simple model to emphasize that."
+
+- title: "Why Are There Wars?"
+  filename: war-1
+  dirname: war-1
+  tldr: "Wars may be mostly fought over territory, but war is conceptually a failed bargain. Here's a simple model to emphasize that."
 # 
 # - title: "Why Bargaining Breaks Down"
 # filename: war-2
