--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -32,11 +32,11 @@
   filename: alliance-bargaining
   dirname: alliance-bargaining
   tldr: "Alliances are institutions to coordinate security policies and influence bargaining between two sides."
-# 
-# - title: "Collective Security as Public Good"
-# filename: collective-security
-# dirname: collective-security
-# tldr: "Collective security organizations (e.g. UN, African Union) ideally prevent/end war, but with varying degrees of success."
+
+- title: "Collective Security as Public Good"
+  filename: collective-security
+  dirname: collective-security
+  tldr: "Collective security organizations (e.g. UN, African Union) ideally prevent/end war, but with varying degrees of success."
 # 
 # - title: "Why Civil Wars Happen, and What We Can Do About Them"
 # filename: civil-war
