--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -95,8 +95,8 @@
   filename: environment-1
   dirname: environment-1
   tldr: "The environment is a public good and a common, which helps explain why cooperating on it is so difficult."
-# 
-# - title: "The Future of International Politics"
-# filename: future-1
-# dirname: future-1
-# tldr: "What does the future of international politics hold? Concerns for WMD proliferation, the ''rise of China'', and globalization's side effects."
+
+- title: "The Future of International Politics"
+  filename: future-1
+  dirname: future-1
+  tldr: "What does the future of international politics hold? Concerns for WMD proliferation, the ''rise of China'', and globalization's side effects."
