add lecture for Oct. 22

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -53,10 +53,10 @@
   dirname: trade-1
   tldr: "Free trade creates abundance and is good for peace. Let's describe it and explain why we limit this good thing."
  
-# - title: "Trade As Strategic Problem"
-#   filename: trade-2
-#   dirname: trade-2
-#   tldr: "Trade resembles a prisoner's dilemma, but small numbers, information, repeated interaction, and linkage politics help it happen."
+- title: "Trade As Strategic Problem"
+  filename: trade-2
+  dirname: trade-2
+  tldr: "Trade resembles a prisoner's dilemma, but small numbers, information, repeated interaction, and linkage politics help it happen."
  
 # - title: "Who Invests Overseas and Why?"
 #   filename: finance-1
