--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -75,10 +75,10 @@
   tldr: "A discussion of the major IMRs the world has known and some major currency crises, like 'Nixon Shock' and 'Black Wednesday.'"
  
  
-# - title: "Why Are Some Countries Richer Than Others?"
-#   filename: development-1
-#   dirname: development-1
-#   tldr: "There are broad correlates for development patterns and rich countries bear some responsibility for why poor countries are poor."
+- title: "Why Are Some Countries Richer Than Others?"
+  filename: development-1
+  dirname: development-1
+  tldr: "There are broad correlates for development patterns and rich countries bear some responsibility for why poor countries are poor."
  
 # - title: "Development Policies and Development Politics"
 #   filename: development-2
