--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -97,4 +97,4 @@
 - title: "The Future of International Politics: WMDs and Their Proliferation"
   filename: future-1
   dirname: future-1
-  tldr: "What does the future of international politics hold? For one, WMDs are getting easy to proliferate."
+  tldr: "What does the future of international politics hold? For one, WMDs are becoming easier to proliferate."
