--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -98,3 +98,8 @@
   filename: future-1
   dirname: future-1
   tldr: "What does the future of international politics hold? For one, WMDs are becoming easier to proliferate."
+  
+- title: "The Future of International Politics: The Rise of China and Globalization"
+  filename: future-2
+  dirname: future-2
+  tldr: "We have major concerns about U.S. global leadership and the future of globalization going forward."
