--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -69,11 +69,11 @@
   dirname: monetary-relations-1
   tldr: "An introduction to exchange rates/currency policy, with applications to the U.S. and Argentina's infamous currency collapse."
 
-# - title: "Ebbs and Flows of International Monetary Regimes"
-#   filename: monetary-relations-2
-#   dirname: monetary-relations-2
-#   tldr: "A discussion of the major IMRs the world has known and some major currency crises, like 'Nixon Shock' and 'Black Wednesday.'"
-#  
+- title: "Ebbs and Flows of International Monetary Regimes"
+  filename: monetary-relations-2
+  dirname: monetary-relations-2
+  tldr: "A discussion of the major IMRs the world has known and some major currency crises, like 'Nixon Shock' and 'Black Wednesday.'"
+
 # - title: "Why Are Some Countries Richer Than Others?"
 #   filename: development-1
 #   dirname: development-1
